# copilot-api

./: .gitignore  package.json
python-port/: .gitignore  Dockerfile  INSTALLATION.md  LICENSE  README.md  STANDALONE_EMBEDDING_CLIENT.md  pyproject.toml  requirements.txt  test_embeddings_final.py
python-port/docs/: README_VALIDATION.md  RESPONSE_ID_FAQ.md  RESPONSE_ID_LIFECYCLE.md
python-port/src/copilot_api/: __init__.py  embedding_client.py  main.py  server.py
python-port/src/copilot_api/commands/: auth.py  check_usage.py  debug.py  start.py
python-port/src/copilot_api/lib/: __init__.py  api_config.py  approval.py  error.py  paths.py  rate_limit.py  shell.py  state.py  token.py  tokenizer.py  utils.py
python-port/src/copilot_api/routes/: chat_completions.py  embeddings.py  messages.py  models.py  token.py  usage.py
python-port/src/copilot_api/services/: get_vscode_version.py
python-port/src/copilot_api/services/copilot/: __init__.py  create_chat_completions.py  create_embeddings.py  get_models.py
python-port/src/copilot_api/services/github/: __init__.py  get_copilot_token.py  get_copilot_usage.py  get_device_code.py  get_user.py  poll_access_token.py
python-port/tests/: EMBEDDINGS_TEST_REPORT.md  __init__.py  test_basic.py  test_copilot_http_simple.py  test_copilot_responses_api.py  test_response_id_expiration.py  test_standalone_embedding_client.py  validate_copilot_responses_api.py  validate_copilot_simple.py
src/: main.ts
